--- a/index.org
+++ b/index.org
@@ -1,91 +1,68 @@
-* 2017-02-27 Emacs news
+* 2017-02-27 Emacs News
+  :PROPERTIES:
+  :ID:       o2b:de20a75f-5e45-49b9-a7af-80834d7d649b
+  :POST_DATE: [2017-03-01 Wed 02:46]
+  :POSTID:   28928
+  :BLOG:     sacha
+  :END:
 
-- [[http://irreal.org/blog/?p=5966][Irreal: Emacs 25.2 RC2]]
-- [[http://pragmaticemacs.com/emacs/some-useful-mu4e-shortcuts/][Pragmatic Emacs: Some useful mu4e shortcuts]]
-- [[http://irreal.org/blog/?p=5964][Irreal: Zamansky 30: Elfeed (2)]]
-- [[http://emacshorrors.com/posts/less-than-exceptional.html][emacshorrors: Less Than Exceptional]]
-- [[http://mbork.pl/2017-02-26_other-window-or-switch-buffer][Marcin Borkowski: other-window-or-switch-buffer]]
-- [[http://feedproxy.google.com/~r/GotEmacs/~3/9HmwmZDXGD8/emacs-252-rc2-out.html][Got Emacs?: Emacs 25.2 RC2 out]]
-- [[http://blog.binchen.org/posts/find-the-buffer-named-by-pinyin.html][Chen Bin (redguardtoo): Find the buffer with Chinese name]]
-- [[http://manuel-uberti.github.io/emacs/2017/02/26/dynamicfonts/][Manuel Uberti: Dynamically change font size in Emacs]]
-- [[https://oremacs.com/2017/02/25/warp-9-make-it-so/][(or emacs: Make it so&amp;#58 file1 -&gt; Makefile -&gt; file2]]
-- [[http://pragmaticemacs.com/emacs/tag-multiple-headlines-at-once-in-org-mode/][Pragmatic Emacs: Tag multiple headlines at once in org-mode]]
-- [[http://mp.vv.si/blog/emacs/building-a-tree-view-for-xml-data/][Matthias Pfeifer: Building a tree-view for xml data]]
-- [[http://sachachua.com/blog/2017/02/2017-02-20-emacs-news/][sachachua: 2017-02-20 Emacs news]]
-- [[https://www.reddit.com/r/emacs/comments/5wkqd6/so_its_possible_to_convert_orgword_but_what_about/][so it's possible to convert org-&gt;word, but what about the other way around?]]
-- [[https://github.com/orgzly/orgzly-android][orgzly/orgzly-android: Orgzly for Android is now opensouce]] ([[https://www.reddit.com/r/emacs/comments/5wkacq/orgzlyorgzlyandroid_orgzly_for_android_is_now/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5wjt5p/good_looking_tabs_mode/][Good looking tabs mode]]
-- [[https://www.reddit.com/r/emacs/comments/5wjrw5/trying_to_track_down_a_weird_error_in_fontlock/][Trying to track down a weird error in font-lock while compiling]]
-- [[https://www.reddit.com/r/emacs/comments/5wjgon/orgmode_spreadsheet_newbie_question/][Org-Mode / spreadsheet / Newbie Question]]
-- [[https://www.reddit.com/r/emacs/comments/5wj76n/orgagendarescheduletotoday/][org-agenda-reschedule-to-today]]
-- [[https://www.reddit.com/r/emacs/comments/5wieow/howto_make_somethingclose_to_evallastsexp_command/][How-to make something-close to `eval-last-sexp` command for perl scripts?]]
-- [[https://github.com/spf13/hugo/releases/tag/v0.19][Hugo v0.19 - with native Emacs Org-mode content support]] ([[https://www.reddit.com/r/emacs/comments/5wibiv/hugo_v019_with_native_emacs_orgmode_content/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5wfus5/is_there_a_javascript_mode_similar_to_elpy_that/][Is there a javascript mode similar to elpy* that can complete over dom functions, complete over jquery, vue, react, etc., whatever I am requiring (if that makes sense)?]]
-- [[http://mp.vv.si/blog/emacs/building-a-tree-view-for-xml-data/][Building a tree-view for xml data]] ([[https://www.reddit.com/r/emacs/comments/5wf9ci/building_a_treeview_for_xml_data/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5wezq1/how_can_i_change_the_ein_output_background_face/][How can I change the ein output background face?]]
-- [[https://oremacs.com/2017/02/25/warp-9-make-it-so/][Make it so: file1 -&gt; Makefile -&gt; file2]] ([[https://www.reddit.com/r/emacs/comments/5w8wsi/make_it_so_file1_makefile_file2/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5w7c8r/trouble_with_inserting_images_in_modified_emacs/][Trouble with inserting images in modified emacs]]
-- [[http://cestlaz.github.io/posts/using-emacs-30-elfeed-2/#.WLIMnCLVqTc.reddit][Using Emacs - 30 - elfeed part 2 - Hydras]] ([[https://www.reddit.com/r/emacs/comments/5w6xxn/using_emacs_30_elfeed_part_2_hydras/][Reddit]])
-- [[https://www.masteringemacs.org/article/fun-games-in-emacs][Fun and Games in Emacs]] ([[https://www.reddit.com/r/emacs/comments/5w6vtl/fun_and_games_in_emacs/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5w6a36/x_forwarding_emacs/][X Forwarding Emacs]]
-- [[https://www.reddit.com/r/emacs/comments/5w68jc/is_it_possible_for_a_function_to_insert_4_spaces/][Is it possible for a function to insert 4 spaces when called]]
-- [[https://www.reddit.com/r/emacs/comments/5w64t5/is_it_possible_to_make_a_face_immune_to_region/][Is it possible to make a face immune to region highlighting?]]
-- [[https://www.reddit.com/r/emacs/comments/5w51ia/a_minimal_c_ide_setup_for_emacs/][A minimal C++ IDE setup for Emacs?]]
-- [[https://www.reddit.com/r/emacs/comments/5w005x/orglearnel_its_a_promising_emacs_package_but/][org-learn.el it's a promising EMACS package but how-to install it? help, pls.]]
-- [[https://www.reddit.com/r/emacs/comments/5vz7ov/restclient_mode_with_socks5_proxy/][Restclient mode with socks5 proxy]]
-- [[https://www.reddit.com/r/emacs/comments/5vwzx5/caret_character_in_ivy_minibuffer/][Caret character in ivy minibuffer]]
-- [[https://reader.tymoon.eu/article/350][Portacle - Adventures in Cross-Platform Deployment]] ([[https://www.reddit.com/r/emacs/comments/5vwwlh/portacle_adventures_in_crossplatform_deployment/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vwmor/how_to_get_swiperhelmswoop_like_regex_search_on/][How to get swiper/helm-swoop like regex search on the browsers?]]
-- [[https://github.com/cute-jumper/helm-ext][Some Dirty Hacks for Helm]] ([[https://www.reddit.com/r/emacs/comments/5vw7mw/some_dirty_hacks_for_helm/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vu08d/error_on_startup_cldotimes_already_defined_not/][Error on startup: "cl-dotimes already defined, not rebinding"]]
-- [[https://i.redd.it/uhjewl450ohy.png][Why is my IPython shell freaking out in Emacs 25? (Clean install)]] ([[https://www.reddit.com/r/emacs/comments/5vss2s/why_is_my_ipython_shell_freaking_out_in_emacs_25/][Reddit]])
-- [[http://blog.jupyter.org/2017/02/23/the-continued-existence-of-the-emacs-ipython-notebook/][The Continued Existence of the Emacs IPython Notebook]] ([[https://www.reddit.com/r/emacs/comments/5vspi7/the_continued_existence_of_the_emacs_ipython/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vrnme/uncommon_document_navigation_tips/][Uncommon document navigation tips?]]
-- [[https://www.reddit.com/r/emacs/comments/5vqmcs/org_mode_how_do_i_stop_periodically_scheduled/][[Org mode] How do I stop periodically scheduled tasks to appear "fresh" in the agenda even if they were not done in time?]]
-- [[https://github.com/jixiuf/golden-ratio-scroll-screen][golden-ratio-scroll-screen: scroll half the page and highlight line before and after scroll]] ([[https://www.reddit.com/r/emacs/comments/5vp34b/goldenratioscrollscreen_scroll_half_the_page_and/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vmpi8/i_just_used_ctrlt_dont_need_that_one_very_otfen/][I just used Ctrl-t. Don't need that one very otfen.]]
-- [[http://cestlaz.github.io/posts/using-emacs-29%20elfeed/#.WK3tXXmqjls.reddit][Using Emacs - 29 -elfeed part 1]] ([[https://www.reddit.com/r/emacs/comments/5vkzah/using_emacs_29_elfeed_part_1/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vkyug/what_packages_are_you_working_on/][What Packages Are You Working On?]]
-- [[https://www.reddit.com/r/emacs/comments/5vk7e7/setting_up_emacs_in_windows_81_as_well_as_using/][setting up emacs in windows 8.1 as well as using org-mode]]
-- [[https://www.reddit.com/r/emacs/comments/5vju1r/backing_upversioning_emacsd_bashrc_xmonad_etc/][Backing up/versioning : .emacs.d, .bashrc, .xmonad, etc config...]]
-- [[https://www.reddit.com/r/emacs/comments/5vgv2f/a_complete_newbie_to_the_land_of_emacs_no_i_am/][A complete newbie to the land of Emacs, no I am not a developer or anything fancy.]]
-- [[https://www.reddit.com/r/emacs/comments/5vhlws/using_tab_for_both_yasnippet_and_company/][Using tab for both yasnippet and company]]
-- [[https://www.reddit.com/r/emacs/comments/5vf2uv/learning_resource_recommendation_beyond_the_basics/][Learning Resource Recommendation: beyond the basics]]
-- [[https://www.reddit.com/r/emacs/comments/5veq76/ricing_emacs/]["ricing" emacs?]]
-- [[https://www.reddit.com/r/emacs/comments/5vdo7r/clean_way_to_unbind_cx_d_to_helmdired_using/][Clean way to unbind C-x d to helm-dired using use-package]]
-- [[https://github.com/abe33/atom-pigments][Emacs alternative for Atom's pigments plugin?]] ([[https://www.reddit.com/r/emacs/comments/5vd77x/emacs_alternative_for_atoms_pigments_plugin/][Reddit]])
-- [[https://tsshriram.com/2017/02/21/emacs-to-the-space/][Emacs to the Space!]] ([[https://www.reddit.com/r/emacs/comments/5vbs7e/emacs_to_the_space/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vbx5y/integrating_emacs_into_other_applications/][Integrating Emacs into other applications]]
-- [[https://www.reddit.com/r/emacs/comments/5vbb2n/why_use_recentf_when_you_can_just_reverse_isearch/][Why use recentf when you can just reverse isearch find-file history?]]
-- [[https://discuss.gohugo.io/t/org-mode-content-support-merged-into-hugo-master/5530][Org-mode content support merged into Hugo master]] ([[https://www.reddit.com/r/emacs/comments/5vb5ge/orgmode_content_support_merged_into_hugo_master/][Reddit]])
-- [[https://www.reddit.com/r/emacs/comments/5vaj8c/emacs_client_splash_image/][Emacs client splash image]]
-- [[https://www.reddit.com/r/emacs/comments/5vahvh/how_to_properly_save_sensitive_information_in/][How to properly save sensitive information in emacs configs?]]
-- [[https://www.reddit.com/r/emacs/comments/5v9o1q/been_using_emacs_for_almost_a_month_now/][Been using emacs for almost a month now]]
-- [[https://www.reddit.com/r/emacs/comments/5v8uk4/is_xsh_making_unix_more_like_an_emacs/][Is Xsh making Unix more like an Emacs?]]
-
-
-- [[https://www.reddit.com/r/spacemacs/comments/5wf24a/preserving_helmminibuffer_results/][Preserving helm.mini-buffer results]]
-- [[https://www.reddit.com/r/spacemacs/comments/5wa64q/could_not_find_module_graphicsgloss/][Could not find module ‘Graphics.Gloss’]]
-- [[https://www.reddit.com/r/spacemacs/comments/5wa2i0/some_introlevel_spacemacs_videos/][Some intro-level Spacemacs videos]]
-- [[https://www.reddit.com/r/spacemacs/comments/5w5d2s/vimstyle_tabs/][Vim-style tabs]]
-- [[https://i.redd.it/185yv07syuhy.png][If your muscle memory can't help but type Spacemacs mnemonics in Vim.. Even for the simplest things like saving the file (`SPC-f-s`), or bringing up the config file (`SPC-f-e-d`) for further customization your favorite (ex) editor.]] ([[https://www.reddit.com/r/spacemacs/comments/5vzlbc/if_your_muscle_memory_cant_help_but_type/][Reddit]])
-- [[https://www.reddit.com/r/spacemacs/comments/5vz00t/custom_keybindings_for_layer/][Custom keybindings for layer]]
-- [[https://www.reddit.com/r/spacemacs/comments/5vu7pp/why_does_setting_tabwidth_also_effect/][Why does setting `tab-width` also effect `indent-tabs-mode?]]
-- [[https://www.reddit.com/r/spacemacs/comments/5vjyh8/cannot_get_inferior_python_shell_to_run_in_360/][Cannot get Inferior Python shell to run in 3.6.0]]
-- [[https://www.reddit.com/r/spacemacs/comments/5vj1nh/keybindings_after_colon/][Keybindings after colon?]]
-
+- Beginner:
+  - [[https://www.reddit.com/r/emacs/comments/5vgv2f/a_complete_newbie_to_the_land_of_emacs_no_i_am/][Newbie tips for non-programmers]] - see comments for tips
+  - [[https://www.reddit.com/r/emacs/comments/5vf2uv/learning_resource_recommendation_beyond_the_basics/][Learning Resource Recommendation: beyond the basics]]
+  - [[https://www.reddit.com/r/spacemacs/comments/5wa2i0/some_introlevel_spacemacs_videos/][Some intro-level Spacemacs videos]]
+- Emacs Lisp:
+  - [[http://emacshorrors.com/posts/less-than-exceptional.html][Less Than Exceptional]]
+  - [[http://mp.vv.si/blog/emacs/building-a-tree-view-for-xml-data/][Building a tree-view for xml data]]
+  - [[https://www.reddit.com/r/emacs/comments/5w64t5/is_it_possible_to_make_a_face_immune_to_region/][Is it possible to make a face immune to region highlighting?]] - overlay that overlay!
+  - [[https://www.reddit.com/r/emacs/comments/5vahvh/how_to_properly_save_sensitive_information_in/][How to properly save sensitive information in emacs configs?]]
+- Emacs development:
+  - [[https://lists.gnu.org/archive/html/info-gnu-emacs/2016-08/msg00001.html][Emacs 25.2 RC2 is out!]]
+  - [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/msg00765.html][Syntax ambiguities in narrowed buffers and multiple major modes: a	proposed solution]]
+  - [[https://www.reddit.com/r/emacs/comments/5vkyug/what_packages_are_you_working_on/][What Packages Are You Working On?]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=0e355e781616936759cff8e6a46adb01760d4211][New command ibuffer-jump]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=9e9d381ff0c83283278f43a65d3ecefd0cde8041][vc-dir branch support]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=ecbd5f9ac6eb2d31241657bbb3e3f9b860391054][New emacsclient option --suppress-output]]
+- Navigation:
+  - [[https://www.reddit.com/r/emacs/comments/5vrnme/uncommon_document_navigation_tips/][Uncommon document navigation tips?]]
+  - [[http://mbork.pl/2017-02-26_other-window-or-switch-buffer][other-window-or-switch-buffer]]
+  - [[http://blog.binchen.org/posts/find-the-buffer-named-by-pinyin.html][Find the buffer with Chinese name]]
+  - [[https://github.com/cute-jumper/helm-ext][Some Dirty Hacks for Helm]] ([[https://www.reddit.com/r/emacs/comments/5vw7mw/some_dirty_hacks_for_helm/][Reddit]])
+  - [[https://github.com/jixiuf/golden-ratio-scroll-screen][golden-ratio-scroll-screen: scroll half the page and highlight line before and after scroll]] ([[https://www.reddit.com/r/emacs/comments/5vp34b/goldenratioscrollscreen_scroll_half_the_page_and/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5vbb2n/why_use_recentf_when_you_can_just_reverse_isearch/][Why use recentf when you can just reverse isearch find-file history?]]
+- Appearance:
+  - [[http://manuel-uberti.github.io/emacs/2017/02/26/dynamicfonts/][Dynamically change font size in Emacs]]
+- Org Mode:
+  - [[http://pragmaticemacs.com/emacs/tag-multiple-headlines-at-once-in-org-mode/][Tag multiple headlines at once in org-mode]]
+  - [[https://www.reddit.com/r/emacs/comments/5wj76n/orgagendarescheduletotoday/][org-agenda-reschedule-to-today]]
+  - [[https://github.com/spf13/hugo/releases/tag/v0.19][Hugo v0.19 - with native Emacs Org-mode content support]] ([[https://www.reddit.com/r/emacs/comments/5wibiv/hugo_v019_with_native_emacs_orgmode_content/][Reddit]], [[https://news.ycombinator.com/item?id=13744102][HN]])
+- Coding:
+  - [[https://oremacs.com/2017/02/25/warp-9-make-it-so/][Make it so: file1 -> Makefile -> file2]] ([[https://www.reddit.com/r/emacs/comments/5w8wsi/make_it_so_file1_makefile_file2/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/5w51ia/a_minimal_c_ide_setup_for_emacs/][A minimal C++ IDE setup for Emacs?]]
+  - [[https://reader.tymoon.eu/article/350][Portacle - Adventures in Cross-Platform Deployment]] ([[https://www.reddit.com/r/emacs/comments/5vwwlh/portacle_adventures_in_crossplatform_deployment/][Reddit]])
+  - [[http://blog.jupyter.org/2017/02/23/the-continued-existence-of-the-emacs-ipython-notebook/][The Continued Existence of the Emacs IPython Notebook]] ([[https://www.reddit.com/r/emacs/comments/5vspi7/the_continued_existence_of_the_emacs_ipython/][Reddit]], [[https://news.ycombinator.com/item?id=13716513][HN]])
+  - [[https://www.reddit.com/r/emacs/comments/5vhlws/using_tab_for_both_yasnippet_and_company/][Using tab for both yasnippet and company]]
+  - [[https://www.reddit.com/r/emacs/comments/5vju1r/backing_upversioning_emacsd_bashrc_xmonad_etc/][Backing up/versioning : .emacs.d, .bashrc, .xmonad, etc config...]]
+- Other:
+  - [[https://www.masteringemacs.org/article/fun-games-in-emacs][Fun and Games in Emacs]] ([[https://www.reddit.com/r/emacs/comments/5w6vtl/fun_and_games_in_emacs/][Reddit]])
+  - [[http://cestlaz.github.io/posts/using-emacs-29%20elfeed/#.WK3tXXmqjls.reddit][Using Emacs - 29 -elfeed part 1]] ([[https://www.reddit.com/r/emacs/comments/5vkzah/using_emacs_29_elfeed_part_1/][Reddit]])
+  - [[http://cestlaz.github.io/posts/using-emacs-30-elfeed-2/#.WLIMnCLVqTc.reddit][Using Emacs - 30 - elfeed part 2 - Hydras]] ([[https://www.reddit.com/r/emacs/comments/5w6xxn/using_emacs_30_elfeed_part_2_hydras/][Reddit]])
+  - [[http://pragmaticemacs.com/emacs/some-useful-mu4e-shortcuts/][Some useful mu4e shortcuts]]
 - New packages:
-- [[package:build-status][build-status]]: Mode line build status indicator
-- [[package:cl-print][cl-print]]: CL-style generic printer facilies
-- [[package:ede-php-autoload-composer-installers][ede-php-autoload-composer-installers]]: Composer installers support for ede-php-autoload
-- [[package:ede-php-autoload-drupal][ede-php-autoload-drupal]]: Drupal support for ede-php-autoload
-- [[package:flycheck-clang-tidy][flycheck-clang-tidy]]: Flycheck syntax checker using clang-tidy
-- [[package:kaolin-theme][kaolin-theme]]: A dark jade theme inspired by Sierra.vim
-- [[package:ob-async][ob-async]]: Asynchronous org-babel src block execution
-- [[package:ob-sql-mode][ob-sql-mode]]: SQL code blocks evaluated by sql-mode
-- [[package:picpocket][picpocket]]: Image viewer
-- [[package:prassee-theme][prassee-theme]]: A high contrast color theme
-- [[package:vue-html-mode][vue-html-mode]]: Major mode for editing Vue.js templates
+  - [[package:build-status][build-status]]: Mode line build status indicator
+  - [[package:cl-print][cl-print]]: CL-style generic printer facilies
+  - [[package:ede-php-autoload-composer-installers][ede-php-autoload-composer-installers]]: Composer installers support for ede-php-autoload
+  - [[package:ede-php-autoload-drupal][ede-php-autoload-drupal]]: Drupal support for ede-php-autoload
+  - [[package:flycheck-clang-tidy][flycheck-clang-tidy]]: Flycheck syntax checker using clang-tidy
+  - [[package:kaolin-theme][kaolin-theme]]: A dark jade theme inspired by Sierra.vim
+  - [[package:ob-async][ob-async]]: Asynchronous org-babel src block execution
+  - [[package:ob-sql-mode][ob-sql-mode]]: SQL code blocks evaluated by sql-mode
+  - [[package:picpocket][picpocket]]: Image viewer
+  - [[package:prassee-theme][prassee-theme]]: A high contrast color theme
+  - [[package:vue-html-mode][vue-html-mode]]: Major mode for editing Vue.js templates
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][Youtube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2017-02/][emacs-devel]].
+
+[[http://sachachua.com/blog/category/emacs-news][Past Emacs News round-ups]]
 
 * 2017-02-20 Emacs news
   :PROPERTIES:
