--- a/index.org
+++ b/index.org
@@ -1,5 +1,44 @@
 Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][YouTube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2018-01][emacs-devel]].
 
+* 2018-02-12 Emacs news
+  :PROPERTIES:
+  :ID:       o2b:f8fbcff4-30d9-4365-8d61-eda82aa4d86a
+  :POST_DATE: [2018-02-12 Mon 18:35]
+  :POSTID:   29160
+  :BLOG:     sacha
+  :END:
+
+- Emacs Lisp:
+  - [[http://www.mostlymaths.net/2016/09/more-emacs-configuration-tweaks.html][More emacs configuration tweaks]] (2016; hat tip to [[http://irreal.org/blog/?p=6950][Irreal]] for the link)
+  - [[https://www.reddit.com/r/emacs/comments/7w5mr7/what_are_the_best_places_to_learn_about_writing/][What are the best places to learn about writing performant elisp?]] ([[https://reddit.com/r/emacs/comments/7w5mr7/what_are_the_best_places_to_learn_about_writing/][Reddit]])
+- Emacs development:
+  - [[https://www.facebook.com/notes/daniel-colascione/buttery-smooth-emacs/10155313440066102/][Buttery Smooth Emacs]][[https://alexschroeder.ch/wiki/2018-02-12_Buttery_Smooth_Emacs][ (2016; hat tip to Alex Schroeder]] for the link)
+  - [[http://tromey.com/blog/?p=982][JIT Compilation for Emacs]] ([[https://reddit.com/r/emacs/comments/7wcs1u/jit_compilation_for_emacs/][Reddit]], [[https://news.ycombinator.com/item?id=16339937][Hacker News]])
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=b9a3cd6899136e13088003c3430e227be3faf9bb][Update `server-name' :version & document sockname]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=f7a853d818d4ef04ceefe5e34d445fd73da8fe11][Remove NS special handling of 'frame-title-format']]
+- Navigation:
+  - [[https://www.reddit.com/r/emacs/comments/7wjyhy/emacs_tip_findfileatpoint/][Emacs Tip: find-file-at-point]]
+- Org Mode:
+  - [[https://www.reddit.com/r/orgmode/comments/7wjmwr/orga_the_ultimate_orgmode_parser_in_javascript/][Orga, the Ultimate org-mode parser, in JavaScript]] ([[https://reddit.com/r/orgmode/comments/7wjmwr/orga_the_ultimate_orgmode_parser_in_javascript/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/7voel1/suggestions_on_making_slides_for_presentations/][Suggestions on making slides (for presentations)]] ([[https://reddit.com/r/emacs/comments/7voel1/suggestions_on_making_slides_for_presentations/][Reddit]])
+  - [[https://github.com/unhammer/org-rich-yank][org-rich-yank - Rich text clipboard for org-mode (paste into a BEGIN_SRC block of correct mode, with link to where it came from)]] ([[https://reddit.com/r/emacs/comments/7wkekz/orgrichyank_rich_text_clipboard_for_orgmode_paste/][Reddit]])
+- Coding:
+  - [[http://martinsosic.com/development/emacs/2017/12/09/emacs-cpp-ide.html][Emacs as a C++ IDE - Martin Sosic's blog]] ([[https://reddit.com/r/emacs/comments/7wzstc/emacs_as_a_c_ide_martin_sosics_blog/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/7x1mgf/starting_in_emacs_26_you_might_not_need_flycheck/][Starting in Emacs 26, you might not need flycheck!]] ([[https://reddit.com/r/emacs/comments/7x1mgf/starting_in_emacs_26_you_might_not_need_flycheck/][Reddit]])
+  - [[http://manuel-uberti.github.io/emacs/2018/02/10/occur/][Refactoring power-ups]]
+- Other:
+  - [[https://www.reddit.com/r/emacs/comments/7wezb4/how_can_i_make_line_rendering_faster/][How can I make line rendering faster?]]
+  - [[https://www.reddit.com/r/emacs/comments/7wcl7r/oneframeperaction_gif_recording/][One-frame-per-action GIF recording]]
+  - [[http://mbork.pl/2018-02-12_append-next-kill][append-next-kill]]
+  - [[https://www.reddit.com/r/emacs/comments/7vocqa/update_on_melpa_removing_emacswiki_packages_they/][Update on MELPA removing EmacsWiki packages]]
+  - [[https://www.reddit.com/r/emacs/comments/7wsnoi/using_countdown_timers_for_alerts/][Using countdown timers for alerts]]
+- Discussion and opinions:
+  - [[https://www.reddit.com/r/emacs/comments/7ww01t/what_has_emacs_replaced_in_your_life/][What has emacs replaced in your life?]] 
+- New package:
+  - [[package:helm-rg][helm-rg]]: a helm interface to ripgrep
+
+Links from [[http://reddit.com/r/emacs/new][reddit.com/r/emacs]], [[http://reddit.com/r/orgmode][/r/orgmode]], [[http://reddit.com/r/spacemacs][/r/spacemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[http://planet.emacsen.org][planet.emacsen.org]], [[https://www.youtube.com/results?search_query=emacs&search_sort=video_date_uploaded][YouTube]], the changes to the [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][Emacs NEWS file]], and [[http://lists.gnu.org/archive/html/emacs-devel/2018-01][emacs-devel]].
+
 * 2018-02-05 Emacs news
   :PROPERTIES:
   :ID:       o2b:19e7a370-8c1e-47ef-bd5f-498036da58f7
